syntax = "proto3";

option csharp_namespace = "SEServer.Auth.Protos";

package authentication;

service AuthenticationService {
  rpc SignIn (SignInRequest) returns (SignInResponse);
  rpc Register (RegisterRequest) returns (RegisterResponse);
}

message SignInRequest{
	string UserName = 1;
	string Password = 2;
}

message SignInResponse{
	string AccessToken = 1;
}

message RegisterRequest{
	string UserName = 1;
	string Password = 2;
}

message RegisterResponse{
	string AccessToken = 1;
}